Improve test in code
Signed-off-by: Franck LECUYER <franck.lecuyer@rte-france.com>